force-app/main/default/objects/ilms__Event__c/ilms__Event__c.object-meta.xml
<CustomObject>
    <label>Session</label>
    <nameField>
        <displayFormat>S{0000}</displayFormat>
        <label>Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>