force-app/main/default/objects/ilms__Event__c/fields/ilms__Add_To_Calendar__c.field-meta.xml
<CustomField>
    <fullName>ilms__Add_To_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add To Calendar</label>
    <type>Checkbox</type>
</CustomField>