force-app/main/default/objects/ilms__Event__c/fields/ilms__Address__c.field-meta.xml
<CustomField>
    <fullName>ilms__Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>