force-app/main/default/objects/ilms__Event__c/fields/ilms__Book__c.field-meta.xml
<CustomField>
    <fullName>ilms__Book__c</fullName>
    <label>Book</label>
    <referenceTo>ilms__Book__c</referenceTo>
    <relationshipName>Event_Book</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>