force-app/main/default/objects/ilms__Event__c/fields/ilms__City__c.field-meta.xml
<CustomField>
    <fullName>ilms__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>