force-app/main/default/objects/ilms__Event__c/fields/ilms__Country__c.field-meta.xml
<CustomField>
    <fullName>ilms__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>