force-app/main/default/objects/ilms__Event__c/fields/ilms__Details__c.field-meta.xml
<CustomField>
    <fullName>ilms__Details__c</fullName>
    <label>Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>