force-app/main/default/objects/ilms__Event__c/fields/ilms__DisLikes__c.field-meta.xml
<CustomField>
    <fullName>ilms__DisLikes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DisLikes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>