force-app/main/default/objects/ilms__Event__c/fields/ilms__Feedback__c.field-meta.xml
<CustomField>
    <fullName>ilms__Feedback__c</fullName>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>