force-app/main/default/objects/ilms__Event__c/fields/ilms__Instructor__c.field-meta.xml
<CustomField>
    <fullName>ilms__Instructor__c</fullName>
    <label>Instructor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>