force-app/main/default/objects/ilms__Event__c/fields/ilms__Likes__c.field-meta.xml
<CustomField>
    <fullName>ilms__Likes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Likes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>