force-app/main/default/objects/ilms__Event__c/fields/ilms__Name__c.field-meta.xml
<CustomField>
    <fullName>ilms__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>