force-app/main/default/objects/ilms__Event__c/fields/ilms__Seats_Available__c.field-meta.xml
<CustomField>
    <fullName>ilms__Seats_Available__c</fullName>
    <label>Total Seats</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>