force-app/main/default/objects/ilms__Event__c/fields/ilms__Seats_Taken__c.field-meta.xml
<CustomField>
    <fullName>ilms__Seats_Taken__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Seats Taken</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>