force-app/main/default/objects/ilms__Event__c/fields/ilms__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ilms__Start_Time__c</fullName>
    <label>Start Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>