force-app/main/default/objects/ilms__Event__c/fields/ilms__ZIP__c.field-meta.xml
<CustomField>
    <fullName>ilms__ZIP__c</fullName>
    <label>ZIP/Postal Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>